@@ -2296,7 +2296,7 @@ void gl_Pripoj_Flek_k_Berusce(ITEMDESC * pItem)
 
   pFlek->Flag = pItem->Index_Of_Game_Mesh;
   pFlek->pos[0] = 0;
-  pFlek->pos[1] = 0.1f;
+  pFlek->pos[1] = 0;
   pFlek->pos[2] = 0;
   pFlek->Material = kom_najdi_material("flek10");
   pFlek->nx[0] = 1;
