@@ -942,6 +942,9 @@ void kom_flek_zmen(FlekHandle fh, BOD * p_p, BOD * p_nx, BOD * p_nz, float dx,
   p_flek->material = material;
   p_flek->p = *p_p;
 
+  // Eliminate y-axis fighting
+  p_flek->p.y += 0.001;
+
   p_flek->nx.x = p_nx->x * dx;
   p_flek->nx.y = p_nx->y * dx;
   p_flek->nx.z = p_nx->z * dx;
