@@ -6,6 +6,7 @@
     - Don't show a duplicate cursor after playing a level
     - Allow held-down keys to be processed immediately after an animation finishes
     - Enable Unicode support
+    - Eliminate y-axis fighting in shadows and burnt spots
 
 * 0.10
     - Incompatible save game format!
